Bug #41434
mds: infinite loop in Locker::file_update_finish()
% Done:
0%
Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
while (p != in->client_snap_caps.end()) { auto q = p->second.find(client); if (q != p->second.end()) { SimpleLock *lock = in->get_lock(p->first); ceph_assert(lock); dout(10) << " completing client_snap_caps for " << ccap_string(p->first) << " lock " << *lock << " on " << *in << dendl; lock->put_wrlock(); p->second.erase(q); if (p->second.empty()) { gather = true; in->client_snap_caps.erase(p++); } else ++p; } // it happens when q == p->second.end() }
Related issues
History
#1 Updated by Patrick Donnelly over 1 year ago
- Assignee set to Zheng Yan
- Priority changed from Normal to High
- Target version set to v15.0.0
- Start date deleted (
08/26/2019) - Source set to Development
- Backport set to nautilus,mimic
- Component(FS) MDS added
#2 Updated by Zheng Yan over 1 year ago
- Status changed from New to Fix Under Review
- Pull request ID set to 29902
#3 Updated by Patrick Donnelly over 1 year ago
- Related to Bug #41728: mds: hang during fragmentdir added
#4 Updated by Patrick Donnelly over 1 year ago
- Status changed from Fix Under Review to Pending Backport
#5 Updated by Nathan Cutler over 1 year ago
- Copied to Backport #42155: nautilus: mds: infinite loop in Locker::file_update_finish() added
#6 Updated by Nathan Cutler over 1 year ago
- Copied to Backport #42156: mimic: mds: infinite loop in Locker::file_update_finish() added
#7 Updated by Nathan Cutler about 1 year ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".