mds: cleanup dirty snap caps tracking

For individual client, track dirty snap caps as whole. This fixes an
infinite loop in Locker::file_update_finish and closes a race case.

Fixes: https://tracker.ceph.com/issues/41434
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit 6acd9e8b3558bf5650302e90ba6b546657cbe68e)

 Conflicts:
	src/mds/CInode.h
	src/mds/Locker.cc
	src/mds/MDCache.cc